[tool.poetry]
name = "layoutya"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "layoutya"}]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.24.1"
openai = "1.3.9"
python-dotenv = "^1.0.0"
streamlit-mermaid = "0.2.0"
streamlit-authenticator = "^0.2.2"
cairosvg = "^2.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
